// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilterDropdownItem /> matches snapshot 1`] = `
<Memo(FilterDropdownItem)
  values={
    Array [
      Object {
        "label": "hello",
        "value": "hello",
      },
      Object {
        "label": "jdog",
        "value": "jdog",
      },
    ]
  }
>
  <WithAnalyticsContext(WithAnalyticsEvents(AtlaskitSelect))
    onChange={[Function]}
    options={
      Array [
        Object {
          "label": "hello",
          "value": "hello",
        },
        Object {
          "label": "jdog",
          "value": "jdog",
        },
      ]
    }
    styles={
      Object {
        "container": [Function],
        "option": [Function],
        "placeholder": [Function],
      }
    }
  />
</Memo(FilterDropdownItem)>
`;

exports[`<FilterDropdownItem /> matches snapshot when loading 1`] = `
<Memo(FilterDropdownItem)
  isLoading={true}
  values={
    Array [
      Object {
        "label": "hello",
        "value": "hello",
      },
      Object {
        "label": "jdog",
        "value": "jdog",
      },
    ]
  }
>
  <WithAnalyticsContext(WithAnalyticsEvents(AtlaskitSelect))
    isLoading={true}
    onChange={[Function]}
    options={
      Array [
        Object {
          "label": "hello",
          "value": "hello",
        },
        Object {
          "label": "jdog",
          "value": "jdog",
        },
      ]
    }
    styles={
      Object {
        "container": [Function],
        "option": [Function],
        "placeholder": [Function],
      }
    }
  />
</Memo(FilterDropdownItem)>
`;
